--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="js/lib/bootstrap/docs/assets/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="js/lib/bootstrap-datepicker/css/datepicker.css">
 	<script data-main="js/app" src="js/lib/requirejs/require.js"></script>
 </head>
 <body>
