date range picker

--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="js/lib/bootstrap/docs/assets/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="js/lib/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="js/lib/bootstrap-datepicker/css/datepicker.css">
 	<script data-main="js/app" src="js/lib/requirejs/require.js"></script>
+	<style type="text/css">
+	.form-group span.error-message {
+		display: none;
+	}
+	.has-error span.error-message {
+		display: block;
+	}
+	</style>
 </head>
 <body>
 	<div id="container"></div>
