Fix bug. Clear error messages when dates are valid

--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,11 @@
 	<link rel="stylesheet" type="text/css" href="js/lib/bootstrap-datepicker/css/datepicker.css">
 	<script data-main="js/app" src="js/lib/requirejs/require.js"></script>
 	<style type="text/css">
-	.form-group span.error-message {
+	.date-range-picker span.error-message {
 		display: none;
 	}
-	.has-error span.error-message {
+
+	.date-range-picker .has-error:last-child span.error-message {
 		display: block;
 	}
 	</style>
