Add router to initialize dates

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 		display: none;
 	}
 
-	.date-range-picker .has-error:last-child span.error-message {
+	.date-range-picker .has-error span.error-message:last-child {
 		display: block;
 	}
 	</style>
